# runeword

./: docker-compose.yml  readme.md
services/backend/: .dockerignore  .gitignore  dockerfile  main.py  pyproject.toml
services/backend/api/v1/: __init__.py  health.py  inference.py
services/backend/lib/: inference.py
services/frontend/: .dockerignore  .gitignore  dockerfile  main.py  pyproject.toml
services/frontend/components/: app.py
