[tool.poetry]
name = "runeword-backend"
version = "0.1.0"
description = ""
authors = ["Anton Kudryavtsev <antonkudryavtsevdoem@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
litestar = {extras = ["standart"], version = "^2.12.1"}
msgspec = "^0.18.6"
aiormq = "^6.8.1"
uvicorn = "^0.31.0"
structlog = "^24.4.0"
transformers = "^4.45.1"
accelerate = "^0.34.2"
numpy = "^2.1.1"
torch = "^2.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
venvPath = "." # pyright lsp support
venv = ".venv"

[tool.ruff]
exclude = [".mypy_cache", ".ruff_cache", ".venv", "venv", "build", "dist"]
line-length = 88
indent-width = 4
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "Q", "B", "I", "UP", "C"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.isort]
case-sensitive = true
force-single-line = false

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = []
